--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
-    <head    
-        <meta charset="utf-8">
-        <title>house of wyverns</title>
+    <head>
+        <script>
+            const link = document.createElement('a');
+            link.href = "/RWEditor";
+            link.click();
+        </script>
     </head>
-    <body>
-        <a href="/RWEditor">thgyauehgiruye</a>
-    </body>
