used meta instead of script redir

--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE HTML>
     <head>
-        <script>
-            const link = document.createElement('a');
-            link.href = "/RWEditor";
-            link.click();
-        </script>
+        <meta http-equiv="refresh" content="0; /RWEditor">
     </head>
