maybe fixed relative url brokenness

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE HTML>
     <head>
-        <meta http-equiv="refresh" content="0; /RWEditor">
+        <meta http-equiv="refresh" content="0; https://rweditor.net/RWEditor">
     </head>
