relative url fix attempt TWO

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
     <head>
-        <meta http-equiv="refresh" content="0; https://rweditor.net/RWEditor">
+        <!-- <meta http-equiv="refresh" content="0; https://rweditor.net/RWEditor"> -->
+        <script>window.location.href = "https://rweditor.net/RWEditor";</script>
     </head>
