--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
     <head>
-        <!-- <meta http-equiv="refresh" content="0; https://rweditor.net/RWEditor"> -->
-        <script>window.location.href = "https://rweditor.net/RWEditor";</script>
     </head>
+    <body>
+        <h1 style="color: red">testPage</h1>
+    </body>
