added fucks to the page.
i added shit to it too

--- a/index.html
+++ b/index.html
@@ -3,4 +3,19 @@
     </head>
     <body>
         <h1 style="color: red">testPage</h1>
+        <h3 style="color: rgb(0, 0, 0)">hi, my name's mev! i'm a purple wyvern who lives on earth and the internet.</h3>
+        <h3 style="color: rgb(0, 0, 0)">i have no gender so refer to me with they/them. i have a penchant for starting projects and not finishing them</h3>
+        <h3 style="color: rgb(0, 0, 0)">i've been dabbling in 3dart and game development recently. stay tuned for whatever comes of that</h3>
+        <h3 style="color: rgb(0, 0, 0)">you can message me on discord if you'd like. i'm "mevvern" over there. feel free to friend request me</h3>
+        <h3 style="color: rgb(0, 0, 0)">i don't bite... unless you want me to. i am a predator after all</h3>
+        <hr>
+        <a href="https://bsky.app/profile/mevvern.wyvernscales.com">my bluesky</a>
+        <br>
+        <a href="https://github.com/mevvern">my github</a>
+        <br>
+        <a href="https://wyvernscales.com/scrambler">try my scrambler</a>
+        <br>
+        <a href="https://wyvernscales.com/hl2sounds">try my source game sound viewer</a>
+        <br>
+        <a href="https://wyvernscales.com/RWEditor">RWEditor (likely will never work on this again)</a>
     </body>
