--- a/404.html
+++ b/404.html
@@ -2,5 +2,5 @@
     <head>
     </head>
     <body>
-        <h1 style="color: #005cb3">the page youre asking for does not Fucking exist try a better one next time</h1>
+        <h1 id="asdffd" style="color: #005cb3">the resource youre asking for does not Fucking exist try a better one next time</h1>
     </body>
