--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
         <h3 style="color: rgb(0, 0, 0)">i have no gender so refer to me with they/them. i have a penchant for starting projects and not finishing them</h3>
         <h3 style="color: rgb(0, 0, 0)">i've been dabbling in 3dart and game development recently. stay tuned for whatever comes of that</h3>
         <h3 style="color: rgb(0, 0, 0)">you can message me on discord if you'd like. i'm "mevvern" over there. feel free to friend request me</h3>
-        <h3 style="color: rgb(0, 0, 0)">i don't bite... unless you want me to</h3>
+        <h3 style="color: rgb(0, 0, 0)">i don't bite...</h3>
         <hr>
-        <a href="https://bsky.app/profile/mevvern.wyvernscales.com">my bluesky</a>
+        <a href="https://bsky.app/profile/wyvernscales.com">my bluesky</a>
         <br>
         <a href="https://github.com/mevvern">my github</a>
+        <br>
+        <a><a href="https://wyvernscales.com/mangleflask">Mangleflask</a>, a minigame from a point and click game called Manglepaw, which i ported and created my own assets for</a>
         <br>
         <a href="https://wyvernscales.com/scrambler">try my scrambler</a>
         <br>
